--- a/sass/components/commons/_btn.scss
+++ b/sass/components/commons/_btn.scss
@@ -30,78 +30,6 @@ button {
     }
 } 
 
-.footer-button {
-
-  display: inline-flex;
-  padding-left: 28px;
-  padding-right: 28px;
-  align-items: center;
-  text-align: center;
-
-  &::after {
-    content: '';
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-
-    margin-left: 10px;
-    background-image: url('../../images/icon\ send.svg');
-    background-repeat: no-repeat;
-  }
-
-
-  // .footer-button {
-  //   // display: flex;
-  //   padding: 10px 29px;
-  //   margin: 0;
-  //   min-width: 200px;
-  
-  //   font-weight: 700;
-  //   font-size: 16px;
-  //   line-height: 1.9;
-  //   align-items: center;
-  
-  //   border-radius: 4px;
-  //   border: none;
-  
-  //   color: $hero-title-color;
-  //   background-color: $accent-color;
-  
-  //   cursor: pointer;
-  
-  //   &::after {
-  //     display: inline-block;
-  //     content: '';
-  //     width: 24px;
-  //     height: 24px;
-  //     margin-left: 10px;
-    
-  //     background-image: url('../../images/icon\ send.svg');
-  //   }
-  // }
-
-
-
-
-
-    // display: inline-flex;
-    // padding-left: 28px;
-    // padding-right: 28px;
- 
-    // // margin: 0;
-    // // min-width: 200px;
-  
-
-    // &::after {
-    //   display: inline-block;
-    //   content: '';
-    //   width: 24px;
-    //   height: 24px;
-    //   margin-left: 10px;    
-    //   background-image: url('../../images/icon\ send.svg');
-    //   background-repeat: no-repeat;
-    // }
-}
 
 .form .btn {
     display: inline-block;
