--- a/sass/components/main/_clients.scss
+++ b/sass/components/main/_clients.scss
@@ -24,8 +24,8 @@
 }
 
 .clients .list {
-  // display: inline-block;
-  margin: 0 15px;
+
+  margin: 15px;
 }
 
 .clients .link {
